--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.16",
     "next": "15.5.4",
     "openai": "^5.23.0",
     "react": "19.1.0",
